syntax = "proto3";
package syft.core.common;
import "proto/core/common/uid.proto";

message ObjectWithID {
  syft.core.common.UID id = 1;
}