syntax = "proto3";
package syft.core.io;

message SpecificLocation {
  syft.core.common.UID uid_object = 1;
}